# Sinestesia_Digital

./: CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake  ws2812.c  ws2812.h  ws2812.pio.h
doxygen/html/: _c_make_c_compiler_id_8c.html  config__autogen_8h.html  config__autogen_8h_source.html  dir_03bf8860ff2fbf16e7724c81736e6777.html  dir_0800afdb795e03c5abc3fecb96ec099f.html  dir_2aa9c842178ff7eb167dc681d4da2670.html  dir_2b19e1647a9be331e8c06cbcafff1ac7.html  dir_47c8a746fb6bd2ad327665613686d83f.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8c.html  menudata.js  version_8h.html  version_8h_source.html  ws2812_8c.html  ws2812_8h.html  ws2812_8h_source.html  ws2812_8pio_8h.html  ws2812_8pio_8h_source.html
doxygen/html/search/: all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  files_0.js  (+6 more)
doxygen/latex/: config__autogen_8h_source.tex  dir_4fef79e7177ba769987a8da36c892c5f.tex  files.tex  refman.tex  ws2812_8h.tex  ws2812_8h_source.tex  ws2812_8pio_8h.tex  ws2812_8pio_8h_source.tex
latex/: _c_make_c_compiler_id_8c.tex  config__autogen_8h.tex  config__autogen_8h_source.tex  dir_0800afdb795e03c5abc3fecb96ec099f.tex  dir_2b19e1647a9be331e8c06cbcafff1ac7.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  files.tex  main_8c.tex  refman.tex  version_8h_source.tex  ws2812_8c.tex  ws2812_8h_source.tex  ws2812_8pio_8h_source.tex
